[package]
name = "paxr"
version = "0.1.0"
authors = ["Marcin Puc <marcin.e.puc@gmail.com>"]
description = "Opinionated wrapper for the XBPS package manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
clap_complete = "4.1"
